skills/gatekeeper-local-testing/assets/k8snativevalidation-required-labels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabelsLocal
metadata:
  name: local-ns-must-have-owner
  labels:
    gatekeeper.sh/tests: "yes"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Namespace"]
  parameters:
    labels:
      - key: owner
        allowedRegex: "^[a-zA-Z]+.agilebank.demo$"
